examples/test/testpolicy9343.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9343
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key11: value5
      key15: value29
      key30: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value37
          key10: value36
      podSelector:
        matchLabels:
          key14: value24
